--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/css/img/favicon.ico" type="image/x-icon">
         <!-- normalizer css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"            integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="      crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
@@ -13,19 +14,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">    
     
             <!-- css do site -->
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/pokedex.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/pokedex.css">
 
     <title>pokedex</title>
+    <div class="imgpoke">
+       <img src="assets/css/img/pokemon-png-logo.webp" width="200" height="80" alt="">
+  </div>
 </head>
 
 <body>
- <section class="content">
-    <h1>Pokedex</h1>
 
+ <section class="content">
+   
     <ol id="pokemonList" class="pokemons">
-            <!-- pokemons-->
-    </ol> 
+            
+    </ol>
     <div class="pagination">  
       <button id="loadMorebutton" type="button"> 
         load More...
@@ -38,9 +42,9 @@
 
 
     <!-- nosso arquivo js -->
-    <script src="js/poke-model.js"></script>
-    <script src="js/POKE-API.JS"></script>
-    <script src="js/main.js"></script>
+    <script src="assets/js/poke-model.js"></script>
+    <script src="assets/js/POKE-API.JS"></script>
+    <script src="assets/js/main.js"></script>
    
 
 </body>
